# antons_opengl_tutorials_book

00_hello_triangle/: CMakeLists.txt
02_shaders/: CMakeLists.txt  main.c
40_compute_shader/: CMakeLists.txt  gl_utils.h  main.cpp
